--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.0",
+        "spatie/browsershot": "^3.45",
+        "spatie/data-transfer-object": "^3.1",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
