--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/jetstream": "^2.3",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
+        "laravolt/avatar": "^4.1",
         "livewire/livewire": "^2.0",
         "spatie/browsershot": "^3.45",
         "spatie/data-transfer-object": "^3.1",
