--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -37,4 +37,4 @@ jobs:
     steps:
       - name: Building docker image
         run: |
-          docker build -t pkg.laravel.pt/website
+          docker build -t pkg.laravel.pt/website .
