--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/browser-kit-testing": "^6.2",
+        "laravel/dusk": "^6.15",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
