--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,18 @@
-# This is a basic workflow to help you get started with Actions
+name: Website deployment
 
-name: CI
-
-# Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
+  workflow_dispatch:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
       - name: ls -a via ssh
         uses: fifsky/ssh-action@master
         with:
@@ -34,9 +22,21 @@ jobs:
           host: ${{ secrets.DEPLOY_HOST }}
           user: ${{ secrets.DEPLOY_USER }}
           key: ${{ secrets.DEPLOY_USER_PRIVATE_KEY }}
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+#  building:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+#        with:
+#          php-version: '8.0'
+#      - uses: actions/checkout@v2
+#      - name: Copy .env
+#        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+#      - name: Install Dependencies
+#        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+#      - name: Generate key
+#        run: php artisan key:generate
+#      - name: Directory Permissions
+#        run: chmod -R 777 storage bootstrap/cache
+#      - name: Building docker image
+#        run: |
+#          docker build -t hub.laravel.pt/website .
