--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: some experiments
-        with:
-          command: |
+        run: |
             node --version
       - name: ls -a via ssh
         uses: fifsky/ssh-action@master
