--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,13 @@ jobs:
           host: ${{ secrets.DEPLOY_HOST }}
           user: ${{ secrets.DEPLOY_USER }}
           key: ${{ secrets.DEPLOY_USER_PRIVATE_KEY }}
+        - name: Publish to Registry
+            uses: HurricanKai/Publish-Docker-Github-Action@master
+            with:
+              name: hub.laravel.pt/website
+              username: ${{ secrets.DEPLOY_USER }}
+              password: ${{ secrets.DEPLOY_USER_PASSWORD }}
+
 #  building:
 #    runs-on: ubuntu-latest
 #    steps:
