--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,22 +15,31 @@ jobs:
       - uses: actions/checkout@v2
       - name: some experiments
         run: |
-            node --version
-      - name: ls -a via ssh
-        uses: fifsky/ssh-action@master
-        with:
-          command: |
-            pwd
-            ls -alh
-          host: ${{ secrets.DEPLOY_HOST }}
-          user: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.DEPLOY_USER_PRIVATE_KEY }}
-      - name: Publish to Registry
-        uses: HurricanKai/Publish-Docker-Github-Action@master
-        with:
-          name: hub.laravel.pt/website
-          username: ${{ secrets.DEPLOY_USER }}
-          password: ${{ secrets.DEPLOY_USER_PASSWORD }}
+          php -r "file_exists('.env') || copy('.env.example', '.env');"
+          composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+          php artisan key:generate
+          chmod -R 777 storage bootstrap/cache
+          npm install
+          npm run production
+          TAG=`date "+%Y%m%d-%H%M%S"`
+          docker build -t hub.laravel.pt/website:$TAG .
+          docker push hub.laravel.pt/website:$TAG
+#      - name: Publish to Registry
+#          uses: HurricanKai/Publish-Docker-Github-Action@master
+#          with:
+#            name: hub.laravel.pt/website
+#            username: ${{ secrets.DEPLOY_USER }}
+#            password: ${{ secrets.DEPLOY_USER_PASSWORD }}
+#      - name: Deploy on remote server
+#        uses: fifsky/ssh-action@master
+#        with:
+#          command: |
+#            pwd
+#            ls -alh
+#          host: ${{ secrets.DEPLOY_HOST }}
+#          user: ${{ secrets.DEPLOY_USER }}
+#          key: ${{ secrets.DEPLOY_USER_PRIVATE_KEY }}
+
 
 #  building:
 #    runs-on: ubuntu-latest
