--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,48 +15,19 @@ jobs:
       - uses: actions/checkout@v2
       - name: some experiments
         run: |
-          TAG=`date "+%Y%m%d-%H%M%S"`
-          docker build -t hub.laravel.pt/website:$TAG .
-          docker login -u ${{ secrets.DEPLOY_USER }} -p ${{ secrets.DEPLOY_USER_PASSWORD }} hub.laravel.pt
-          docker push hub.laravel.pt/website:$TAG
-#          php -r "file_exists('.env') || copy('.env.example', '.env');"
-#          composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-#          php artisan key:generate
-#          chmod -R 777 storage bootstrap/cache
-#          npm install
-#          npm run production
-#      - name: Publish to Registry
-#          uses: HurricanKai/Publish-Docker-Github-Action@master
-#          with:
-#            name: hub.laravel.pt/website
-#            username: ${{ secrets.DEPLOY_USER }}
-#            password: ${{ secrets.DEPLOY_USER_PASSWORD }}
-#      - name: Deploy on remote server
-#        uses: fifsky/ssh-action@master
-#        with:
-#          command: |
-#            pwd
-#            ls -alh
-#          host: ${{ secrets.DEPLOY_HOST }}
-#          user: ${{ secrets.DEPLOY_USER }}
-#          key: ${{ secrets.DEPLOY_USER_PRIVATE_KEY }}
+          WEBSITE_TAG=`date "+%Y%m%d-%H%M%S"`
+          ::set-env name=WEBSITE_TAG::0.0.21-preview
+#          docker build -t hub.laravel.pt/website:$TAG .
+#          docker login -u ${{ secrets.DEPLOY_USER }} -p ${{ secrets.DEPLOY_USER_PASSWORD }} hub.laravel.pt
+#          docker push hub.laravel.pt/website:$TAG
 
-
-#  building:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-#        with:
-#          php-version: '8.0'
-#      - uses: actions/checkout@v2
-#      - name: Copy .env
-#        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-#      - name: Install Dependencies
-#        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-#      - name: Generate key
-#        run: php artisan key:generate
-#      - name: Directory Permissions
-#        run: chmod -R 777 storage bootstrap/cache
-#      - name: Building docker image
-#        run: |
-#          docker build -t hub.laravel.pt/website .
+      - name: Deploy on remote server
+        uses: fifsky/ssh-action@master
+        with:
+          command: |
+            pwd
+            ls -alh
+            echo WEBSITE_TAG
+          host: ${{ secrets.DEPLOY_HOST }}
+          user: ${{ secrets.DEPLOY_USER }}
+          key: ${{ secrets.DEPLOY_USER_PRIVATE_KEY }}
