--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -19,13 +19,13 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
-[program:laravel-horizon]
-directory=/var/www/html
-command=php artisan horizon
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
+#[program:laravel-horizon]
+#directory=/var/www/html
+#command=php artisan horizon
+#stdout_logfile=/dev/stdout
+#stdout_logfile_maxbytes=0
+#stderr_logfile=/dev/stderr
+#stderr_logfile_maxbytes=0
 
 [program:cron]
 command=cron -f
