--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           TAG=`date "+%Y%m%d-%H%M%S"`
           echo $GITHUB_ENV
-          echo "website_action_state=yellow" >> $GITHUB_ENV
+          echo "WEBSITE_ACTION_STATE=yellow" >> $GITHUB_ENV
           echo $GITHUB_ENV
 #          docker build -t hub.laravel.pt/website:$TAG .
 #          docker login -u ${{ secrets.DEPLOY_USER }} -p ${{ secrets.DEPLOY_USER_PASSWORD }} hub.laravel.pt
@@ -27,6 +27,7 @@ jobs:
         uses: fifsky/ssh-action@master
         with:
           command: |
+            echo ${{ github.WEBSITE_ACTION_STATE }}
             pwd
             ls -alh
             echo WEBSITE_TAG
