--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,18 @@ jobs:
         run: |
           TAG=`date "+%Y%m%d-%H%M%S"`
           echo "website_tag=$TAG" >> $GITHUB_ENV
-          docker build -t hub.laravel.pt/website:$TAG .
-          docker login -u ${{ secrets.DEPLOY_USER }} -p ${{ secrets.DEPLOY_USER_PASSWORD }} hub.laravel.pt
-          docker push hub.laravel.pt/website:$TAG
-
+#          docker build -t hub.laravel.pt/website:$TAG .
+#          docker login -u ${{ secrets.DEPLOY_USER }} -p ${{ secrets.DEPLOY_USER_PASSWORD }} hub.laravel.pt
+#          docker push hub.laravel.pt/website:$TAG
+      - name: Deploy docker files
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.DEPLOY_HOST }}
+          port: 22
+          username: ${{ secrets.DEPLOY_USER }}
+          key: ${{ secrets.KEY }}
+          source: "tests/a.txt,tests/b.txt"
+          target: "~/apps/website"
       - name: Deploy on remote server
         uses: fifsky/ssh-action@master
         with:
