--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,9 @@ jobs:
         run: |
           TAG=`date "+%Y%m%d-%H%M%S"`
           echo "website_tag=$TAG" >> $GITHUB_ENV
-#          docker build -t hub.laravel.pt/website:$TAG .
-#          docker login -u ${{ secrets.DEPLOY_USER }} -p ${{ secrets.DEPLOY_USER_PASSWORD }} hub.laravel.pt
-#          docker push hub.laravel.pt/website:$TAG
+          docker build -t hub.laravel.pt/website:$TAG .
+          docker login -u ${{ secrets.DEPLOY_USER }} -p ${{ secrets.DEPLOY_USER_PASSWORD }} hub.laravel.pt
+          docker push hub.laravel.pt/website:$TAG
       - name: Deploy docker files
         uses: appleboy/scp-action@master
         with:
