--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,7 @@ jobs:
           command: |
             cd apps/website
             mv docker-compose.override.production.yml  docker-compose.override.yml
+            docker login -u ${{ secrets.DEPLOY_USER }} -p ${{ secrets.DEPLOY_USER_PASSWORD }} hub.laravel.pt
             TAG="${{ env.website_tag }}" docker-compose up -d --remove-orphans
           host: ${{ secrets.DEPLOY_HOST }}
           user: ${{ secrets.DEPLOY_USER }}
