--- a/docker-compose.override.production.yml
+++ b/docker-compose.override.production.yml
@@ -6,6 +6,7 @@ services:
     volumes:
       - ./.env:/var/www/html/.env
       - ./storage/app/public:/var/www/html/storage/app/public
+      - ./storage/logs:/var/www/html/storage/logs
     labels:
       - traefik.http.routers.website.rule=Host(`laravel.pt`)
       - traefik.http.routers.website.tls.certresolver=leresolver
