--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=f1f06dcc10414446afde",
-    "/css/app.css": "/css/app.css?id=0f11648cc86c239a5c18"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
