--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "postcss-import": "^14.0.1",
+        "puppeteer-core": "^9.1.1",
         "tailwindcss": "^2.0.1"
     },
     "dependencies": {
+        "node-fetch": "^2.6.1",
         "puppeteer": "^9.1.0"
     }
 }
