--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
+    name: "🐳 Build & Deploy"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
