--- a/docker-compose.override.production.yml
+++ b/docker-compose.override.production.yml
@@ -10,3 +10,14 @@ services:
     labels:
       - traefik.http.routers.website.rule=Host(`laravel.pt`)
       - traefik.http.routers.website.tls.certresolver=leresolver
+  mysql:
+    image: 'mysql:8.0'
+    environment:
+      MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+      MYSQL_DATABASE: '${DB_DATABASE}'
+      MYSQL_USER: '${DB_USERNAME}'
+      MYSQL_PASSWORD: '${DB_PASSWORD}'
+    volumes:
+      - 'lpt_website_mysql:/var/lib/mysql'
+    networks:
+      - web
