Users with SoftDelete Moved Tests to Pest Added Tests Placeholders

--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "laravel/sail": "^1.12",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^5.10",
+        "pestphp/pest-plugin-faker": "^1.0",
         "pestphp/pest-plugin-laravel": "^1.1",
         "phpunit/phpunit": "^9.5.8"
     },
