--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.36",
+        "@fortawesome/free-brands-svg-icons": "^5.15.4",
+        "@fortawesome/vue-fontawesome": "^3.0.0-4",
         "@headlessui/vue": "^1.4.1",
         "@heroicons/vue": "^1.0.4",
         "@tailwindcss/aspect-ratio": "^0.3.0",
