Added Actions to Delete & Force Delete Tags & Links Added Area to Manage Tags & Edit Tags Added Auto-Slugify Added Unique Slugs Logic Added Soft Deletes to Important Tables Added new roles to manage tags Fixed issue with Social Networks Hide Social Network Login when not Configured Added Additional Env Variables to Toggle Social Networks Login

--- a/.env.example
+++ b/.env.example
@@ -61,20 +61,23 @@ BROWSER_SHOT_NPM_BINARY=/usr/bin/npm
 CACHE_PREFIX=laravel_pt
 
 # Socialite - Google
-GOOGLE_CLIENT_ID=xxxxkbqqln6da.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=xxxxxT6h8
+GOOGLE_LOGIN_ENABLE=false
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=http://localhost/login/google/callback
 
 # Socialite - Discord
-DISCORD_CLIENT_ID=xxxxxxxx
-DISCORD_CLIENT_SECRET=xxxxxx
+DISCORD_LOGIN_ENABLE=false
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
 DISCORD_REDIRECT_URI=http://localhost/login/discord/callback
 DISCORD_AVATAR_GIF=false
 DISCORD_EXTENSION_DEFAULT=jpg
 
 # Socialite - Twitter
-TWITTER_API_KEY=xxxxxxxxx
-TWITTER_API_SECRET_KEY=xxxxxx
+TWITTER_LOGIN_ENABLE=false
+TWITTER_API_KEY=
+TWITTER_API_SECRET_KEY=
 TWITTER_REDIRECT_URI=http://localhost/login/twitter/callback
 
 TRAEFIK_HOST=laravel.pt
