--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "open-graph-scraper": "^4.9.2",
         "popper.js": "^1.16.1",
         "postcss-nesting": "^8.0.1",
+        "slugify": "^1.6.1",
         "vue-axios": "^3.3.7",
         "vue-i18n": "^9.1.9"
     }
