--- a/.env.testing
+++ b/.env.testing
@@ -81,3 +81,7 @@ TWITTER_API_SECRET_KEY=
 TWITTER_REDIRECT_URI=http://localhost/login/twitter/callback
 
 TRAEFIK_HOST=laravel.pt
+
+#Larabug
+LB_KEY=
+LB_PROJECT_KEY=
