--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "scripts": {
         "dev": "npm run development",
         "development": "mix",
+        "dev-ssr": "mix --mix-config=webpack.server.mix.js",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
@@ -39,7 +40,6 @@
         "@heroicons/vue": "^1.0.4",
         "@tailwindcss/aspect-ratio": "^0.3.0",
         "@types/ziggy-js": "^1.3.0",
-        "express": "^4.17.1",
         "laravel-mix-merge-manifest": "^2.0.0",
         "open-graph-scraper": "^4.9.2",
         "popper.js": "^1.16.1",
